fix: reply placeholder wrong positioning

--- a/framework/core/less/forum/Post.less
+++ b/framework/core/less/forum/Post.less
@@ -441,7 +441,7 @@
   color: var(--muted-color);
   border-radius: 10px;
   background-color: transparent;
-  width: 100%;
+  width: calc(~"100% + 20px * 2");
   display: flex;
 
   .Post-header {
